figured out media queries(maybe), working on dang pictures(that were working) for portfolio page...

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <title>Portfolio | Yasha</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content= "width-device-width, initial-scale=1">
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Yasha</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -20,18 +21,20 @@
     </div>
   </header>
 
+  <div class="clr"></div>
+
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Portfolio</h1>
 
       <div class="row">
         <div class="col-md-6">
-          <img src="assets/images/Port1.jpg" alt="Pet">
+          <img src="assets/images/Port1.jpg" class="pic" alt="Pet">
           <h3>Pet</h3>
         </div>
 
         <div class="col-md-6">
-          <img src="assets/images/Port2.jpg" alt="Helping">
+          <img src="assets/images/Port2.jpg" class="pic" alt="Helping">
           <h3>Helping</h3>
         </div>
       </div>
@@ -39,13 +42,13 @@
 
       <div class="row">
         <div class="col-md-6">
-          <img src="assets/images/Port3.jpg" alt="Party">
+          <img src="assets/images/Port3.jpg" class="pic" alt="Party">
 
           <h3>Party</h3>
         </div>
 
         <div class="col-md-6">
-          <img src="assets/images/Port4.jpg" alt="Modeling">
+          <img src="assets/images/Port4.jpg" class="pic" alt="Modeling">
 
           <h3>Modeling</h3>
         </div>
@@ -53,7 +56,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <img src="assets/images/Port5.jpg" alt="Music">
+          <img src="assets/images/Port5.jpg" class="pic" alt="Music">
           <h3>Music</h3>
         </div>
 
