--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <title>About | Yasha </title>
   <link  rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content= "width-device-width, initial-scale=1">
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Yasha Nisttáhuz</a>
+      <a href="index.html" id="logo">Yasha </a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
